# reference_docking

./: .gitignore  CLAUDE.md  README.md  check_dependencies.sh  environment.yaml  pyproject.toml  run_pipeline.sh
01_src/reference_docking/: __init__.py
01_src/reference_docking/m00_preparation/: __init__.py  binding_site_definition.py  ligand_preparation.py  receptor_preparation.py
01_src/reference_docking/m01_docking/: __init__.py  dock6_runner.py  footprint_rescore.py  gbsa_rescore.py  grid_generation.py  mmpbsa_analysis.py  mmpbsa_decomp.py  score_collector.py
01_src/reference_docking/m03_crystal_analysis/: __init__.py  plip_interaction_analysis.py
01_src/reference_docking/m04_dock6_analysis/: __init__.py  footprint_analysis.py  footprint_rescoring.py
01_src/reference_docking/m06_pharmit/: __init__.py  pharmit_pharmacophore.py  pharmit_zone_selector.py
02_scripts/: 00a_ligand_preparation.py  00b_receptor_preparation.py  00d_binding_site_definition.py  01b_grid_generation.py  01c_dock6_run.py  01d_footprint_rescore.py  01e_score_collection.py  01f_gbsa_rescore.py  01g_mmpbsa_decomp.py  01h_mmpbsa_analysis.py  03a_plip_interaction_analysis.py  04b_footprint_analysis.py  06a_pharmit_pharmacophore.py  06b_pharmit_zone_selector.py
03_configs/: 00a_ligand_preparation.yaml  00b_receptor_preparation.yaml  00d_binding_site_definition.yaml  01b_grid_generation.yaml  01c_dock6_run.yaml  01d_footprint_rescore.yaml  01e_score_collection.yaml  01f_gbsa_rescore.yaml  01g_mmpbsa_decomp.yaml  01h_mmpbsa_analysis.yaml  03a_plip_interaction_analysis.yaml  04b_footprint_analysis.yaml  06a_pharmit_pharmacophore.yaml  06b_pharmit_zone_selector.yaml
04_data/campaign/UDX_reference_pH63/: campaign_config.yaml
tests/: test_pipeline.py
(+5 files in other folders)
